--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,17 +3,17 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
     }
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
     compileOptions {
         encoding "UTF-8"
     }
     defaultConfig {
         applicationId "com.happypuppy.toastmasterstimer"
         minSdkVersion 16
-        targetSdkVersion 21
-        versionCode 8
-        versionName "1.4.3"
+        targetSdkVersion 22
+        versionCode 10
+        versionName "1.4.5"
     }
     buildTypes {
         release {
@@ -22,14 +22,11 @@ android {
         }
     }
     productFlavors {
-        lollipop {
-            minSdkVersion 21
-            targetSdkVersion 21
-        }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
 }
