--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,17 +3,16 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
     }
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 27
     compileOptions {
         encoding "UTF-8"
     }
     defaultConfig {
         applicationId "com.happypuppy.toastmasterstimer"
-        minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 11
-        versionName "1.4.6"
+        minSdkVersion 22
+        targetSdkVersion 27
+        versionCode 18
+        versionName "1.6.2"
     }
     buildTypes {
         release {
@@ -26,7 +25,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.android.support:recyclerview-v7:22.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
 }
