--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
                 android:value="com.happypuppy.toastmasterstimer.MainMenuActivity" />
         </activity>
         <activity
-            android:name="com.happypuppy.toastmasterstimer.PreferencesActivity"
+            android:name="com.happypuppy.toastmasterstimer.MyFragmentActivity"
             android:label="@string/action_settings"
             android:parentActivityName="com.happypuppy.toastmasterstimer.MainMenuActivity" >
         </activity>
