--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@
 
 android.useAndroidX=true
 android.enableJetifie=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=true
+android.nonFinalResIds=false
+org.gradle.unsafe.configuration-cache=true
